# CineTickets

./: Dockerfile  README.md  cc.yaml  installdeps.yaml  pyproject.toml  tests.yaml
.github/workflows/: build-push-docker-image.yml
cinetickets/: CineTicketsException.py  EmpresaCinematografica.py  Pelicula.py  Sala.py  exception.py
docs/hito_0/: descripcion_problema.md
docs/hito_1/: planificacion.md
docs/hito_2/: README.md  biblioteca_aserciones.md  correcciones.md  gestor_dependencias.md  gestor_tareas.md  marco_tests.md  pmv_interno_1.md  pmv_interno_2.md
docs/hito_3/: README.md  actualizacion_automatica.md  eleccion_base_dockerfile.md  github_container_registry.md  mejora_dockerfile.md  subida_contenedor.md
documentacion/: desarrollo_hito_0.md
documentacion/hito_0/: README.md  desarrollo_hito_0.md  descripcion_problema.md
documentacion/hito_2/: biblioteca_aserciones_marco_tests.md
models/: ClienteCine.py  EmpresaCinematografica.py  Sala.py
models/tests/: test_Sala.py
tests/: test_CineTicketsException.py  test_Pelicula.py  test_Sala.py  test_exception.py
