[tool.poetry]
name = "cinetickets"
version = "1.0.1"
description = ""
authors = ["Manuel Carmona Pérez <e.manuelvillar@go.ugr.es>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
